Modified content and added first article

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <header>
         <h1>Aayush Kasurde</h1>
 		<img src="https://avatars.githubusercontent.com/u/7703416?v=3"></img>
-        <p>A Theme for GitHub Pages</p>
-        <p class="view"><a href="http://github.com/orderedlist/minimal">View the Project on GitHub <small>orderedlist/minimal</small></a></p>
+		<p class="view"><a href="http://github.com/aayush-kasurde/Aayush-Kasurde.github.io"> View Site Source </a></p>
+        <p class="view"><a href="http://github.com/orderedlist/minimal">View Theme on GitHub <small>orderedlist/minimal</small></a></p>
         <ul>
           <li><a href="https://github.com/orderedlist/minimal/zipball/master">Download <strong>ZIP File</strong></a></li>
           <li><a href="https://github.com/orderedlist/minimal/tarball/master">Download <strong>TAR Ball</strong></a></li>
@@ -28,9 +28,20 @@
       <section>
         <h1>Just Another Blog</h1>
         <p> Hello World Using Github.io</p>
+		
+		<h2>How to get Github Avatar link </h2> 1/09/2014 
+		<p>
+			<ol>
+				<li>Go to</li>&nbsp;
+				<pre>https://api.github.com/users/&lt;github-username&gt;</pre>
+				<li>Copy URL variable related to <em>avatar_url</em></li>
+				<li>Include this link in img src </li>
+				<li>And you are done</li>
+			</ol>
+		</p>
       </section>
       <footer>
-        <p>This project is maintained by <a href="http://github.com/orderedlist">Steve Smith</a></p>
+        <p>This project is maintained by <a href="http://github.com/aayush-kasurde">Aayush Kasurde</a></p>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
       </footer>
     </div>
