Added hosted cmd

--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 				<li>And you are done</li>
 			</ol>
 		</p>
+		<h2>Show password of hosted network in Windows 7</h2>
+		<p>
+			<ol>
+				<li>Goto Start &gt; Run </li>
+				<li>Type <em>cmd</em></li>
+				<li>In command line, type </li> &nbsp;
+				<pre>netsh wlan show hostednetwork setting=security</pre>
+			</ol>
+		</p>
       </section>
       <footer>
         <p>This project is maintained by <a href="http://github.com/aayush-kasurde">Aayush Kasurde</a></p>
